[package]
name = "r2s-database"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Database for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-query = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
sea-orm-migration = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
