[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Database for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-database"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[package.metadata.cargo-machete]
ignored = [
  "serde_json",
  "tracing",
  "num-traits",
] # required by sea-orm `FromJsonResult`

[dependencies]
chrono = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tracing = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
