[package]
name = "r2s-email"
version = "3.2.0"
edition = "2021"
rust-version = "1.80.0"
description = "Email client for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
r2s-config = { version = "3", path = "../config" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
lettre = { version = "0.11", features = [
  "smtp-transport",
  "tokio1",
  "rustls-tls",
  "rustls-native-certs",
  "tokio1-rustls-tls",
  "pool",
  "hostname",
  "tracing",
  "builder",
], default-features = false }
thiserror = "1.0"
futures = "0.3"
async-nats = "0.36"

[lib]
path = "src/lib.rs"
