[package]
name = "r2s-email"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Email client for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
lettre = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-nats = { workspace = true }
serde_json = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
