[package]
name = "r2s-event"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Event pusher for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }

r2s-config = { workspace = true }
r2s-database = { workspace = true }

[lib]
path = "src/lib.rs"
