[package]
name = "r2s-keygen"
version = "0.5.6"
edition = "2021"
rust-version = "1.76.0"
description = "Keygen for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = "0.4"
ring = "0.17"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21"
