[package]
name = "r2s-license"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
description = "License checker for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = "0.4"
ring = "0.17"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-license"
path = "src/main.rs"
