[package]
name = "r2s-license"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "License checker for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = { workspace = true }
ring = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-license"
path = "src/main.rs"
