[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "License checker for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-license"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[dependencies]
chrono     = { workspace = true }
clap       = { workspace = true }
hex        = { workspace = true }
ring       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-license"
path = "src/main.rs"
