[package]
name = "r2s-media"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Media storage for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
ring = "0.17"
mime = "0.3"
infer = "0.16"
image = "0.25"
nanoid = "0.4"
hex = "0.4"

r2s-database = { version = "3", path = "../database" }
r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
