[package]
name = "r2s-media"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Media storage for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = { workspace = true }
ring = { workspace = true }
mime = { workspace = true }
infer = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
nanoid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

r2s-config = { workspace = true }
r2s-database = { workspace = true }

[lib]
path = "src/lib.rs"
