[package]
name = "r2s-migrator"
version = "1.4.3"
edition = "2021"
rust-version = "1.79.0"
description = "Database migrator for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-orm-migration = "0.12"
sea-query = "0.30"

tracing = "0.1"

r2s-config = { version = "1", path = "../config" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-migrator"
path = "src/main.rs"
