[package]
name = "r2s-migrator"
version = "3.2.0"
edition = "2021"
rust-version = "1.80.0"
description = "Database migrator for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { version = "1.40", features = ["full"] }

sea-orm = { version = "1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-orm-migration = "1.0"
sea-query = "0.31"

tracing = "0.1"

r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-migrator"
path = "src/main.rs"
