[package]
name = "r2s-migrator"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Database migrator for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-query = { workspace = true }
sea-orm-migration = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-migrator"
path = "src/main.rs"
