[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "OAuth/OAuth2 wrapper for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-oauth"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.2"

[dependencies]
async-trait  = { workspace = true }
reqwest      = { workspace = true }
roxmltree    = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
