[package]
description = "OAuth/OAuth2 wrapper for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-oauth"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["rune", "rune-modules"] # required by sea-orm `FromJsonResult`

[dependencies]
async-trait  = { workspace = true }
chrono       = { workspace = true }
reqwest      = { workspace = true }
roxmltree    = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
