[package]
name = "r2s-queue"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Message queue for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-nats = { workspace = true }
serde_json = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
