[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Message queue for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-queue"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[package.metadata.cargo-machete]
ignored = ["tracing"] # required by sea-orm `FromJsonResult`

[dependencies]
async-nats = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
