[package]
name = "r2s-server"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Server for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = { workspace = true }
clap = { workspace = true }
ring = { workspace = true }
heck = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
rustls = { workspace = true }
nanoid = { workspace = true }
sea-orm = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
deunicode = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros"] }

# System stat
systemstat = { workspace = true }

# Logger
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# local crates
r2s-cache = { workspace = true }
r2s-email = { workspace = true }
r2s-event = { workspace = true }
r2s-media = { workspace = true }
r2s-oauth = { workspace = true }
r2s-queue = { workspace = true }
r2s-bucket = { workspace = true }
r2s-config = { workspace = true }
r2s-captcha = { workspace = true }
r2s-auditor = { workspace = true }
r2s-checker = { workspace = true }
r2s-cluster = { workspace = true }
r2s-license = { workspace = true }
r2s-database = { workspace = true }
r2s-migrator = { workspace = true }

[build-dependencies]
git-version = { workspace = true }
build-target = { workspace = true }
rustc_version = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-server"
path = "src/main.rs"
