[package]
name = "r2s-traffic"
version = "1.4.2"
edition = "2021"
rust-version = "1.78.0"
description = "Websocket proxy for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
wsrx = { version = "0.2", features = ["server"] }

[lib]
path = "src/lib.rs"
