[package]
name = "r2s-traffic"
version = "1.4.3"
edition = "2021"
rust-version = "1.79.0"
description = "Websocket proxy for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
wsrx = { version = "0.2", features = ["server"] }

[lib]
path = "src/lib.rs"
